force-app/main/default/objects/Internal_Task__c/Internal_Task__c.object-meta.xml
<CustomObject>
    <description>Used for users to send custom task assignments to users / other departments to work on quotes</description>
    <label>Internal Task</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Internal Tasks Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>