force-app/main/default/objects/Internal_Task__c/fields/Additional_Comments_Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_Internal_Only__c</fullName>
    <inlineHelpText>Only internal CDC/Groth Employees will see this information.</inlineHelpText>
    <label>Additional Comments (Internal Only)</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>