force-app/main/default/objects/Internal_Task__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>Assigned Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eng Sales Support</fullName>
            </value>
            <value>
                <fullName>Production Planning</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>