force-app/main/default/objects/Internal_Task__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Capture the commentary on the Task</description>
    <label>Comments</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>