force-app/main/default/objects/Internal_Task__c/fields/Completed_by_User__c.field-meta.xml
<CustomField>
    <fullName>Completed_by_User__c</fullName>
    <label>Completed by User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>