force-app/main/default/objects/Internal_Task__c/fields/Eng_Completed__c.field-meta.xml
<CustomField>
    <fullName>Eng_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eng Completed</label>
    <type>Checkbox</type>
</CustomField>