force-app/main/default/objects/Internal_Task__c/fields/Engineering_Needed__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering Needed</label>
    <type>Checkbox</type>
</CustomField>