force-app/main/default/objects/Internal_Task__c/fields/Engineering_Status__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Status__c</fullName>
    <label>Engineering Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold - Config Issue</fullName>
            </value>
            <value>
                <fullName>On Hold - Sales Assistance</fullName>
            </value>
            <value>
                <fullName>Return from Sales</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>External Information Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>