force-app/main/default/objects/Internal_Task__c/fields/Production_Planning_Completed__c.field-meta.xml
<CustomField>
    <fullName>Production_Planning_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production Planning Completed</label>
    <type>Checkbox</type>
</CustomField>