force-app/main/default/objects/Internal_Task__c/fields/Production_Planning_Needed__c.field-meta.xml
<CustomField>
    <fullName>Production_Planning_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production Planning Needed</label>
    <type>Checkbox</type>
</CustomField>