force-app/main/default/objects/Internal_Task__c/fields/Production_Planning_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Planning_Status__c</fullName>
    <label>Production Planning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>