force-app/main/default/objects/Internal_Task__c/fields/Quote_Lines_with_Eng_Review__c.field-meta.xml
<CustomField>
    <fullName>Quote_Lines_with_Eng_Review__c</fullName>
    <formula>Quote__r.Quote_Lines_with_Eng_Review__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Lines with Eng Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>