force-app/main/default/objects/Internal_Task__c/fields/Quote_Sourcing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sourcing_Entity__c</fullName>
    <description>Used to help us with reporting and dashboards</description>
    <formula>TEXT(Quote__r.Sourcing_Entity__c)</formula>
    <label>Quote Sourcing Entity</label>
    <type>Text</type>
</CustomField>