force-app/main/default/objects/Internal_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales Process</fullName>
            </value>
            <value>
                <fullName>Engineering Process</fullName>
            </value>
            <value>
                <fullName>Production Planning Process</fullName>
            </value>
            <value>
                <fullName>Review Quote</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>