force-app/main/default/objects/Internal_Task__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Request cancelation of an in-process order</fullName>
            </value>
            <value>
                <fullName>Request Cancelation of in-process quote</fullName>
            </value>
            <value>
                <fullName>Request change to an ordered quote</fullName>
            </value>
            <value>
                <fullName>Request Eng support for a configured product missing information</fullName>
            </value>
            <value>
                <fullName>Request Eng support on valid product that needs to be special</fullName>
            </value>
            <value>
                <fullName>Request expedited return of a quote in Production Planning queue</fullName>
            </value>
            <value>
                <fullName>Request expedited return of quote in Engineering Sales Support queue</fullName>
            </value>
            <value>
                <fullName>Request Inside Sales support for assistance on a quote</fullName>
            </value>
            <value>
                <fullName>Request reduced leadtime or assignment of invalid leadtime</fullName>
            </value>
            <value>
                <fullName>Request update on in-process order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>